--- a/pokshun/package.json
+++ b/pokshun/package.json
@@ -1,6 +1,7 @@
 {
   "name": "pokshun",
   "version": "0.1.0",
+  "homepage": "https://benjaminchong99.github.io/pokshun/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
